--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 
 <meta charset="UTF-8">
 <meta name="description" content="BeWedding2 | Best WordPress theme for weddings">
-<link rel="alternate" hreflang="en-US" href="https://wasim-sakina.github.io/Test/">
+<link rel="alternate" hreflang="en-US" href="https://github.com/Wasim-sakina/Test.git">
 <title>Wakina</title>
 <meta name="robots" content="max-image-preview:large">
 <meta name="format-detection" content="telephone=no">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="dns-prefetch" href="https://fonts.googleapis.com/">
-<link rel="alternate" type="application/rss+xml" title="Wakina » Feed" href="https://www.wakina.local/?feed=rss2">
-<link rel="alternate" type="application/rss+xml" title="Wakina » Comments Feed" href="https://www.wakina.local/?feed=comments-rss2">
-<link rel="alternate" type="application/rss+xml" title="Wakina » Home Comments Feed" href="https://www.wakina.local/?feed=rss2&amp;page_id=2">
+<link rel="alternate" type="application/rss+xml" title="Wakina » Feed" href="https://github.com/Wasim-sakina/Test.git?feed=rss2">
+<link rel="alternate" type="application/rss+xml" title="Wakina » Comments Feed" href="https://github.com/Wasim-sakina/Test.git?feed=comments-rss2">
+<link rel="alternate" type="application/rss+xml" title="Wakina » Home Comments Feed" href="https://github.com/Wasim-sakina/Test.git/?feed=rss2&amp;page_id=2">
 <script type="text/javascript">
 /* <![CDATA[ */
 window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15.0.3\/72x72\/","ext":".png","svgUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15.0.3\/svg\/","svgExt":".svg","source":{"concatemoji":"https:\/\/www.wakina.local\/wp-includes\/js\/wp-emoji-release.min.js?ver=6.6.2"}};
